src/objects/FCOG__Opportunity_Creation_Gating__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration setting for the Full Circle CRM Opportunity Creation Manager package</description>
    <fields>
        <fullName>FCOG__Enable_Contact_Gating__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Requires that all opportunities be created from the contact page.</description>
        <inlineHelpText>When checked, All opportunities must be created off the contact page or lead conversion unless overridden at the profile or user level</inlineHelpText>
        <label>Gate All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCOG__PageTitle__c</fullName>
        <defaultValue>&quot;You cannot create opportunities this way&quot;</defaultValue>
        <description>Page title for VisualForce page</description>
        <inlineHelpText>This will be used as the header on the Visualforce warning page.</inlineHelpText>
        <label>Gating Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCOG__Set_Opportunity_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set the opportunity name based on the Account name followed by a dash</description>
        <inlineHelpText>When selected, opportunities created off the contact will have the Opportunity Name field pre-populated with the account name similar to those created through lead conversion.</inlineHelpText>
        <label>Set Opportunity Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCOG__Use_Window_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gates via a window alert bypassing display of the Visual Force page</description>
        <inlineHelpText>When selected, this option will be presented with a window alert instead of a Visualforce page if the user is prevented from creating an opportunity.</inlineHelpText>
        <label>Use Window Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCOG__WarningPageResource__c</fullName>
        <description>Resource name of HTML static resource to use as the content for the warning page. Overrides default (DefaultGatingContent)</description>
        <label>Warning Page Resource</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCOG__Window_alert_message__c</fullName>
        <defaultValue>&quot;Use the New Opportunity button from the contact page to create new opportunities&quot;</defaultValue>
        <description>Message to display on window alert if window alert is selected</description>
        <inlineHelpText>If &apos;Use Window Alert&apos; is selected, this will be the message that is displayed in the alert window.</inlineHelpText>
        <label>Window Alert Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Creation Gating</label>
</CustomObject>